<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailFragment">

    <data>
        <variable
            name="viewModel"
            type="com.nazanin.harrypotter.viewmodels.DetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_dark_background"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:lineSpacingExtra="5sp"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textSize="28sp"
                android:layout_gravity="center"
                tools:layout_editor_absoluteX="180dp"
                tools:layout_editor_absoluteY="15dp" />

            <ImageView
                android:id="@+id/back_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/character" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.32" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/character_iv"
            android:layout_width="@dimen/card_image_size_large"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:layout_margin="@dimen/space_8"
            setImageUrl="@{viewModel.selectedCharacter.image}"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:shapeAppearanceOverlay="@style/rectangleImageView"
            tools:srcCompat="@tools:sample/avatars" />

        <View
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:alpha="0.87"
            android:background="@color/black"
            android:layout_margin="@dimen/space_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline1" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/space_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/character_tv"
                    style="@style/TextStyleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/character"
                    app:layout_constraintEnd_toStartOf="@+id/real_name_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/character_name_tv"
                    style="@style/TextSubtitleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.selectedCharacter.name}"
                    app:layout_constraintBottom_toBottomOf="@+id/character_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/character_tv"
                    app:layout_constraintTop_toTopOf="@+id/character_tv"
                    tools:text="Harry Potter" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/name_tv"
                    style="@style/TextStyleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    app:layout_constraintEnd_toStartOf="@+id/real_name_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/character_tv" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/real_name_tv"
                    style="@style/TextSubtitleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.selectedCharacter.actor}"
                    app:layout_constraintBottom_toBottomOf="@+id/name_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/name_tv"
                    app:layout_constraintTop_toTopOf="@+id/name_tv"
                    tools:text="Daniel Radcliffe" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/house_tv"
                    style="@style/TextStyleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/house"
                    app:layout_constraintEnd_toStartOf="@+id/house_name_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_tv" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/house_name_tv"
                    style="@style/TextSubtitleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.selectedCharacter.house}"
                    app:layout_constraintBottom_toBottomOf="@+id/house_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/house_tv"
                    app:layout_constraintTop_toTopOf="@+id/house_tv"
                    tools:text="Gryffindor" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/date_tv"
                    style="@style/TextStyleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    app:layout_constraintEnd_toStartOf="@+id/date_of_birth_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/house_tv" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/date_of_birth_tv"
                    style="@style/TextSubtitleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    convertDateString="@{viewModel.selectedCharacter.dateOfBirth}"
                    app:layout_constraintBottom_toBottomOf="@+id/date_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/date_tv"
                    app:layout_constraintTop_toTopOf="@+id/date_tv"
                    tools:text="31-07-1980" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/gender_tv"
                    style="@style/TextStyleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    app:layout_constraintEnd_toStartOf="@+id/is_alive_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_tv" />

                <ImageView
                    android:id="@+id/gender_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/gender_tv"
                    app:layout_constraintStart_toEndOf="@+id/gender_tv"
                    app:layout_constraintTop_toTopOf="@+id/gender_tv"
                    bindImageGender="@{viewModel.selectedCharacter.gender}"
                    tools:src="@drawable/ic_male"
                    android:contentDescription="@string/gender" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/alive_tv"
                    style="@style/TextStyleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/alive"
                    app:layout_constraintEnd_toStartOf="@+id/is_alive_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gender_tv" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/is_alive_tv"
                    style="@style/TextSubtitleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    bindAlive="@{viewModel.selectedCharacter.alive}"
                    app:layout_constraintBottom_toBottomOf="@+id/alive_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/alive_tv"
                    app:layout_constraintTop_toTopOf="@+id/alive_tv"
                    tools:text="No" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/species_tv"
                    style="@style/TextStyleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/species"
                    app:layout_constraintEnd_toStartOf="@+id/name_species_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/alive_tv" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/name_species_tv"
                    style="@style/TextSubtitleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.selectedCharacter.species}"
                    app:layout_constraintBottom_toBottomOf="@+id/species_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/species_tv"
                    app:layout_constraintTop_toTopOf="@+id/species_tv"
                    tools:text="human" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/wizard_tv"
                    style="@style/TextStyleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/wizard"
                    app:layout_constraintEnd_toStartOf="@+id/is_wizard_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/species_tv" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/is_wizard_tv"
                    style="@style/TextSubtitleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    isWizard="@{viewModel.selectedCharacter.wizard}"
                    android:text="@string/yes"
                    app:layout_constraintBottom_toBottomOf="@+id/wizard_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/wizard_tv"
                    app:layout_constraintTop_toTopOf="@+id/wizard_tv"
                    tools:text="Yes" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/hogwarts_tv"
                    style="@style/TextStyleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/hogwarts"
                    app:layout_constraintEnd_toStartOf="@+id/is_hogwarts_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wizard_tv" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/is_hogwarts_tv"
                    style="@style/TextSubtitleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    bindHogwarts="@{viewModel.selectedCharacter}"
                    app:layout_constraintBottom_toBottomOf="@+id/hogwarts_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/hogwarts_tv"
                    app:layout_constraintTop_toTopOf="@+id/hogwarts_tv"
                    tools:text="Student" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/patronus_tv"
                    style="@style/TextStyleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/patronus"
                    app:layout_constraintEnd_toStartOf="@+id/name_patronus_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hogwarts_tv" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/name_patronus_tv"
                    style="@style/TextSubtitleDetails"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.selectedCharacter.patronus}"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="@+id/patronus_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/patronus_tv"
                    app:layout_constraintTop_toTopOf="@+id/patronus_tv"
                    tools:text="stag" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>